# mirai_data_collection

./: .gitignore  LICENSE  README.rst  main.py  pyproject.toml  test.py
docs/: conf.py  index.rst
examples/data/model_weights/fourcastnet2/: weights.tar.download
mirai_data_collection/: main.py
mirai_data_collection/api/: __init__.py  data_collect.py  reset.py
tests/unit/: test_api.py  test_cli.py
tests/unit/core/: test_config.py  test_logger.py
